feature(class): add layout for search class and my class